adição de um botão de redirecionamento para o topo da pagina

--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
                     </form>
                 </div>
            </div>
+
+           <div id="btnToTop">
+                <div class="i arrow up">
+
+                </div>
+           </div>
+
+
         </div>
        <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
